# Nexus-signal-engine

./: .gitignore  Aegis234567.py  Aegis23456789  CHANGELOG.md  CITATION.cff  Dockerfile  Immortal_nexus.py  LICENSE  NexisSignalEngineHoaxcheck.py  NexisSignalEngine_UnicodeHardened.py  Nexus.py  README.md  config.json  docker-compose.yml  governed_scan.py  hoax_scan.py  hoax_tester.py  immortal_aegis.py  nexis_aegis_bridge.py  nexis_signal_engine.py  nexus23.py  prometheus.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_output.py  unicode_threat_integration_patch2.py
docs/: aegis_behavior.md  configuration.md  risk_scoring.md  testing.md
kubernetes/: deployment.yaml
nexus_signal_engine/: __init__.py  api.py  audit.py  auth.py  compliance.py  core.py  lang_analyzer.py  rbac.py  webhooks.py
nexus_signal_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nexus_signal_engine/core/: __init__.py  engine.py
nexus_signal_engine/detection/: behavior.py  correlator.py  multimodal.py  threat_detector.py  threat_scoring.py
nexus_signal_engine/hoax/: __init__.py  filter.py
tests/: run_tests.py  test_behavior.py  test_correlator.py  test_immortal_bridge.py  test_multimodal.py  test_threat_detector.py  test_threat_scoring.py
