[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-signal-engine"
version = "1.0.0"
description = "Adversarially robust, forensic-grade, agent-driven AI signal analysis and memory engine."
readme = "README.md"
authors = [
  { name = "Jonathan Harrison", email = "harrison82_95@hotmail.com" }
]
license = { file = "LICENSE" }
keywords = [
  "AI",
  "ethics",
  "signal-analysis",
  "adversarial",
  "memory",
  "audit",
  "NLP",
  "explainable-AI"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security"
]
dependencies = [
    "numpy>=1.22",
    "rapidfuzz>=3.0.0",
    "nltk>=3.8",
    "filelock>=3.13",
    "tenacity>=8.2.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-client>=0.19.0",
    "aiohttp>=3.9.0",
    "email-validator>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "difflib-sequences>=1.0.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Raiff1982/Nexus-signal-engine"
Repository = "https://github.com/Raiff1982/Nexus-signal-engine"
Documentation = "https://github.com/Raiff1982/Nexus-signal-engine#readme"
Issues = "https://github.com/Raiff1982/Nexus-signal-engine/issues"
DOI = "https://doi.org/10.5281/zenodo.16269918"
