[metadata]
name = nexus-signal-engine
version = 1.0.0
author = Jonathan Harrison
author_email = harrison82_95@hotmail.con
description = Adversarially robust, forensic-grade, agent-driven AI signal analysis and memory engine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Raiff1982/Nexus-signal-engine
license = MIT
keywords = AI, ethics, signal-analysis, adversarial, memory, audit, NLP, explainable-AI
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Security

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.22
    rapidfuzz>=3.0.0
    nltk>=3.8
    filelock>=3.13
    tenacity>=8.2.3
